samples/_failures_safe/1761174096_98543b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ebdd5209.c: In function ‘tokenize_next’:
./samples/SAFE/__tmp_ebdd5209.c:164:24: error: expected ‘;’ at end of input
  164 |         token->line = t
      |                        ^
      |                        ;
./samples/SAFE/__tmp_ebdd5209.c:164:9: error: expected declaration or statement at end of input
  164 |         token->line = t
      |         ^~~~~
./samples/SAFE/__tmp_ebdd5209.c:164:9: error: expected declaration or statement at end of input
